--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-# migrations/
+migrations/
 db.sqlite3
 db.sqlite3-journal
 
@@ -105,13 +105,15 @@ celerybeat.pid
 # Environments
 .env/
 .venv/
-.vscode/
-.idea/
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# IDEA's
+.vscode/
+.idea/
 
 # Spyder project settings
 .spyderproject
@@ -131,5 +133,5 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Other folder
+# Other folders
 media/
